--- a/Relatório/Relatório.tex
+++ b/Relatório/Relatório.tex
@@ -34,11 +34,11 @@
 \todo{arrumar datas}
 
 \chapter{Introdução}
-Nesta atividade de laboratório exploramos os efeitos físicos de dois tipos de sensores. Um sensor potenciométrico e outro de efeito Hall linear.
+Nesta atividade de laboratório, tem-se objetivo de explorar e entender o funcionamento dos efeitos físicos de dois tipos de sensores. Um sensor potenciométrico e outro de efeito Hall linear.
 
 \chapter{Metodologia Experimental}
-\section{Sensor potênciométrico}
-Para a atividade do sensor potenciométrico, desenvolvemos um pêndulo cujo eixo estava conectado à um potenciômetro. A construção está ilustrada na figura \ref{fig:pendulo}:
+\section{Sensor potenciométrico}
+Para a atividade do sensor potenciométrico, foi desenvolvido um pêndulo cujo eixo estava conectado a um potenciômetro. A construção está ilustrada na Figura \ref{fig:pendulo}:
 
 \begin{figure}[H]
 \centering
@@ -60,16 +60,16 @@ Este pêndulo pode ser modelado eletricamente pelo circuito da Figura \ref{fig:p
 
 onde $R(angulo)$ é uma resistência variável em função do ângulo $\theta$.
 
-A fim de extrair a função de transferência do sensor, realiza-se um experimento com repetição onde, através de um voltímetro, mede-se a tensão elétrica sobre o resistor $R(\theta)$ em função do ângulo $\theta$. Com este experimento, pode-se realizar um \textit{fit} cuja função será utilizada como a função de transferência do sensor. Uma vez que o potenciômetro é linear, espera-se que a função de transferência é dada na forma da equação \ref{eq:pendulo-tf-forma} e conforme a estrutura apresentada na figura \ref{fig:pendulo}:
+A fim de extrair a função de transferência do sensor, realiza-se um experimento com repetição onde, através de um voltímetro, mede-se a tensão elétrica sobre o resistor $R(\theta)$ em função do ângulo $\theta$. Com esse experimento, pode-se realizar um \textit{fit} cuja função foi utilizada como a função de transferência do sensor. Uma vez que o potenciômetro é linear, espera-se que a função de transferência é dada na forma da Equação \ref{eq:pendulo-tf-forma} e conforme a estrutura apresentada na Figura \ref{fig:pendulo}:
 
 \begin{equation}
 	R(\theta) = R_0 + R_1 \times \theta
 	\label{eq:pendulo-tf-forma}
 \end{equation}
 
-onde $R(\theta)$ é a resistência elétrica do pêndulo em $\Omega$ para um dado ângulo de inclinação, $R_0$ é a resistência do pêndulo em $\Omega$ no ângulo de 0 graus, $R_1$ é a variação de resistência elétrica do pêndulo em $\Omega / rad$ em função da variação de ângulo e $\theta$ é a inclinação do pêndulo em $rad$ relativa à sua posição de repouso.
+onde $R(\theta)$ é a resistência elétrica do pêndulo em $\Omega$(ohm, unidade de medida da resistência elétrica) para um dado ângulo de inclinação, $R_0$ é a resistência do pêndulo em $\Omega$ no ângulo de zero graus em relação a origem(a linha tracejada), $R_1$ é a variação de resistência elétrica do pêndulo em $\Omega / rad$ em função da variação de ângulo e $\theta$ é a inclinação do pêndulo em $rad$(radiano) relativa à sua posição de repouso.
 
-Para minimizar o efeito de \textit{ripple} de tensão elétrica da fonte de alimentação, foram utilizados 2 reguladores de tensão elétrica um \textit{LM7805}\todo{colocar o fabricante, existem vários, confirmar em cima do CI}, regulador de $(5 \pm 0.2)V$\cite{datasheet-lm7805} e um regulador \textit{LM7905}\todo{colocar o fabricante, existem vários, confirmar em cima do CI} de $(-5 \pm 0.2)V$\cite{datasheet-lm7905}. O mesmo conjunto de reguladores foi utilizado para alimentar todos componentes externos. De acordo com o fabricante, este regulador possui um tolerância de 0.2V com uma distribuição uniforme de probabilidade. A incerteza correspondente pode ser obtida pela equação \ref{eq:incerteza-regulador}:
+Para minimizar o efeito de \textit{ripple} de tensão elétrica da fonte de alimentação, foram utilizados dois reguladores de tensão elétrica, sendo um dele foi LM7805\todo{colocar o fabricante, existem vários, confirmar em cima do CI}, regulador de $(5 \pm 0.2)V$\cite{datasheet-lm7805} e outro foi regulador LM7905 \todo{colocar o fabricante, existem vários, confirmar em cima do CI} de $(-5 \pm 0.2)V$\cite{datasheet-lm7905}. O mesmo conjunto de reguladores foi utilizado para alimentar todos componentes elétricos externos. De acordo com o fabricante, este regulador possui um tolerância de 0.2V(volt) com uma distribuição uniforme de probabilidade. A incerteza correspondente, $\delta_{regulador}$, pode ser obtida pela Equação \ref{eq:incerteza-regulador}:
 
 \begin{equation}
 	\delta_{regulador} = \frac{\Delta_{regulador}}{\sqrt{3}} \approx 0.12 V
@@ -78,7 +78,7 @@ Para minimizar o efeito de \textit{ripple} de tensão elétrica da fonte de alim
 
 \subsection{Modelagem do sistema de aquisição de dados do pêndulo}
 
-Para obter a resposta temporal do pêndulo, utilizamos um mecanismo de aquisição de dados conforme a figura \ref{fig:pendulo-fluxo-medidas}:
+Para obter a resposta temporal do pêndulo, foi utilizado um mecanismo de aquisição de dados conforme a Figura \ref{fig:pendulo-fluxo-medidas}:
 
 \begin{figure}[H]
 \centering
@@ -89,15 +89,15 @@ $E_n$ indica as etapas de aquisição de dados.
 \end{figure}
 
 \begin{itemize}
-	\item \textbf{E1}: representa o sensor utilizado, no caso deste experimento um potenciômetro;
+	\item \textbf{E1}: representa o sensor utilizado, no caso deste experimento, foi um potenciômetro;
 	\item \textbf{E2}: representa um amplificador com ganho unitário (\textit{buffer});
 	\item \textbf{E3}: representa o filtro anti-alias utilizado para o processo de amostragem;
 	\item \textbf{E4}: representa o processo de amostragem realizado utilizando o LabVIEW e o DAQ (Data Acquisition device)
 	\item \textbf{E5}: no LabVIEW foram armazenados os dados amostrados;
-	\item \textbf{E6}: após o armazenamento dos dados foi realizado o processamento destes dados.
+	\item \textbf{E6}: após do armazenamento dos dados, foi realizado o processamento destes dados.
 \end{itemize}
 
-A cadeia de medidas deste experimento pode ser representada pelo diagrama de blocos da figura \ref{fig:pendulo-cadeia-medidas}:
+A cadeia de medidas deste experimento pode ser representada pelo diagrama de blocos da Figura \ref{fig:pendulo-cadeia-medidas}:
 
 \begin{figure}[H]
 \centering
@@ -111,7 +111,7 @@ Para a etapa E1, utilizou-se um
 
  de \todo{qual a resistência dele?} com uma incerteza informada pelo fabricante de 100 $\Omega$ \todo{chute}.
 
-Para a etapa E2, utilizou-se um amplificador operacional LM741 configurado como um buffer de tensão, conforme o esquemático elétrico apresentado na figura \ref{fig:buffer-tensão}:
+Para a etapa E2, utilizou-se um amplificador operacional LM741\cite{datasheet-lm741} configurado como um seguidor de tensão, \textit{buffer}, conforme o esquemático elétrico apresentado na Figura \ref{fig:buffer-tensão}:
 
 \begin{figure}[H]
 \centering
@@ -121,7 +121,7 @@ Para a etapa E2, utilizou-se um amplificador operacional LM741 configurado como 
 \end{figure}
 
 \noindent
-onde $V_{in}$ é a tensão elétrica de entrada e $V_{out}$ é a tensão elétrica de saída do buffer. A função de transferência do buffer é dada, trivialmente, pela equação \ref{eq:buffer}
+onde $V_{in}$ é a tensão elétrica de entrada e $V_{out}$ é a tensão elétrica de saída do buffer. A função de transferência do buffer é dada, trivialmente, pela Equação \ref{eq:buffer}
 
 \begin{equation}
 	V_{out} = V_{in}
@@ -622,6 +622,7 @@ Independente da resistência elétrica dos fios, considerando que a impedância 
 \todo{formatar essas referencias da forma correta... nao sei como ele quer}
 \bibitem{datasheet-lm7805} Datasheet oferecido pelo fabricante do regulador de tensão LM7805
 \bibitem{datasheet-lm7905} Datasheet oferecido pelo fabricante do regulador de tensão LM7905
+\bibitem{datasheet-lm741} Datasheet oferecido pelo fabricante do amplificador operacional LM741
 
 \todo{arrumar bibliografia}
 
